Makes mvn clean install works with JDK17 as well.
PiperOrigin-RevId: 427245243
Change-Id: I7bbb6f4e7d087541be6b67f7fe24ae5a0eabfd95