@@ -165,6 +165,66 @@
               </plugins>
           </build>
       </profile>
+      <profile>
+          <id>surefire-java8</id>
+          <activation>
+              <jdk>1.8</jdk>
+          </activation>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-surefire-plugin</artifactId>
+                      <version>3.0.0-M5</version>
+                      <configuration>
+                          <systemPropertyVariables>
+                              <appengine.runtime.dir>../deployment/target/runtime-deployment-${project.version}</appengine.runtime.dir>
+                              <use.jetty94>true</use.jetty94>
+                              <use.mavenjars>true</use.mavenjars>
+                              <com.google.apphosting.runtime.jetty94.LEGACY_MODE>true</com.google.apphosting.runtime.jetty94.LEGACY_MODE>
+                          </systemPropertyVariables>
+                          <!-- Most of these tests were developed with Google's build system, which runs each test
+                          in its own process. So they don't always clean up completely after themselves, for
+                          example leaving threads running. With reuseForks=false, we get one process per test
+                          from Maven too. -->
+                          <reuseForks>false</reuseForks>
+                      </configuration>
+                  </plugin>
+              </plugins>
+          </build>
+      </profile>
+      <profile>
+          <id>surefire-java-above8</id>
+          <activation>
+              <jdk>[11,20)</jdk>
+          </activation>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-surefire-plugin</artifactId>
+                      <version>3.0.0-M5</version>
+                      <configuration>
+                          <systemPropertyVariables>
+                              <appengine.runtime.dir>../deployment/target/runtime-deployment-${project.version}</appengine.runtime.dir>
+                              <use.jetty94>true</use.jetty94>
+                              <use.mavenjars>true</use.mavenjars>
+                              <com.google.apphosting.runtime.jetty94.LEGACY_MODE>true</com.google.apphosting.runtime.jetty94.LEGACY_MODE>
+                          </systemPropertyVariables>
+                          <argLine>
+                              --add-opens java.base/java.lang=ALL-UNNAMED
+                              --add-opens java.base/java.nio.charset=ALL-UNNAMED
+                          </argLine>
+                          <!-- Most of these tests were developed with Google's build system, which runs each test
+                          in its own process. So they don't always clean up completely after themselves, for
+                          example leaving threads running. With reuseForks=false, we get one process per test
+                          from Maven too. -->
+                          <reuseForks>false</reuseForks>
+                      </configuration>
+                  </plugin>
+              </plugins>
+          </build>
+      </profile>
   </profiles>
 
   <dependencyManagement>
@@ -695,22 +755,6 @@
         <plugin>
           <artifactId>maven-shade-plugin</artifactId>
           <version>3.2.4</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M5</version>
-          <configuration>
-          <!-- Most of these tests were developed with Google's build system, which runs each test
-               in its own process. So they don't always clean up completely after themselves, for
-               example leaving threads running. With reuseForks=false, we get one process per test
-               from Maven too. -->
-            <reuseForks>false</reuseForks>
-            <systemPropertyVariables>
-              <use.jetty94>true</use.jetty94>
-            </systemPropertyVariables>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>com.github.os72</groupId>
